--- a/content/poem/2018-05-05-悟价.md
+++ b/content/poem/2018-05-05-悟价.md
@@ -2,19 +2,20 @@
 title: "悟价"
 date: '2018-05-05'
 ---
-  #  ![](/images/heshui.jpg)
+# ![](/images/heshui.jpg)
   
-  **悟价**
+  **$${\Huge 悟价}$$**
   
-  **闲居**
-  
+  **$${\Large 闲居}$$**
+
  
-2018.05.05于明辨 
+ 
+$$2018.05.05于明辨 $$
 
-名利权色趣， 
+$$名利权色趣， $$
 
-众生心醉迷。 
+$$ 众生心醉迷。 $$
 
-君欲何所取？ 
+$$君欲何所取？ $$
 
-末者为真理。 
+$$末者为真理。 $$
