--- a/content/research/2020-12-13-HypothesisTest.Rmd
+++ b/content/research/2020-12-13-HypothesisTest.Rmd
@@ -43,11 +43,11 @@ $$H_0: R(\theta)=0~~~ versus ~~~H_1: \exists r_j(\theta)\neq 0, j\leq q$$
 nU(\hat\theta)^T \hat\Sigma_U^{-1}U(\hat\theta)$，其中$\hat\theta$是有约束的估计，$U(\theta)$是原始对数似然函数的导数，也就是所谓的Score。因为对数似然函数是一种特殊的目标函数，因此Score检验也可推广到一般的目标函数上。首先得到该带约束的目标函数的参数估计，然后把参数估计代入到无约束的目标函数的导数上，这时就叫拉格朗日检验（注意：只有似然为目标的时候叫得分检验）。
 
 # 一般统计检验
-
-统计检验一般分成这样几步：1）构造检验统计量$T_n$；2）计算检验统计量的分布；3）计算检验的拒绝域$W_n=\{T_n>c_{1-\alpha}\}$；4）验证检验统计量的实现值是否落在拒绝域，若在则拒绝。
+一般而言，我们先假设数据来自原假设，然后根据该前提假设下来推导检验统计量的（渐近）分布。
+统计检验一般分成这样几步：1）构造检验统计量$T_n$；2）计算检验统计量的分布；3）计算检验的拒绝域$W_n=\{T_n>c_{1-\alpha}\}$；4）验证检验统计量的实现值是否落在拒绝域，若在则拒绝。 
 
 其中计算检验统计量$T_n$的渐近分布，实质指计算$T_n$从原假设中生成数据下的渐近分布。若iid数据${x_i,i\leq n}$来自均值为$μ_0$  的总体，考虑均值检验问题：
-$$H_0:μ=μ_1$$
+$$H_0:μ_0=μ_1$$
 1）构造检验统计量$T_n=\sqrt{n} (\bar x -μ_1 )$.
 2）计算数据来自原假设的渐近分布，有如下方法：
 
