--- a/content/research/2020-12-24-张量基础.Rmd
+++ b/content/research/2020-12-24-张量基础.Rmd
@@ -12,7 +12,7 @@ layout: post
   *2020年12月于西财*
 
 # 预备知识
-在介绍张量之前，我们先来了解一些基础知识，其中包括矩阵的运算和张量的运算操作。
+我们在介绍张量之前，我们先来了解一些基础知识，其中包括矩阵的运算和张量的运算操作。
 
 ## 几种矩阵（张量）运算符号和规则
 Kronecker积：设$A \in R^{I \times J}, B \in R^{K \times L}$，表示为
