--- a/content/cn/家常食谱.md
+++ b/content/cn/家常食谱.md
@@ -14,4 +14,8 @@ https://m.renrenshipu.com/caipu/video/10316.html
 ## 糖醋排骨
 
 https://m.meishij.net/html5/zuofa/jiachangtangcupaigu_2.html?src=360_so_kch
+
+## 干煸四季豆
+
+https://www.360kuai.com/mob/transcoding?url=9848903322216d1da&cota=4&kuai_so=1&tj_url=so_rec&sign=360_e39369d1&refer_scene=so_2
   
